src/objects/Communication__c.object
<CustomObject>
    <fields>
        <fullName>AccountName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AccountName</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Communications</relationshipLabel>
        <relationshipName>Communications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CallType__c</fullName>
        <label>CallType</label>
        <picklist>
            <picklistValues>
                <fullName>Inbound</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outbound</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_First_Name__c</fullName>
        <formula>if( NOT(ISBLANK( OptyName__c )), OptyName__r.Account.FirstName , if(NOT(ISBLANK(LeadName__c)), LeadName__r.FirstName,if(NOT(ISBLANK(AccountName__c)),AccountName__r.FirstName, &apos;No Name&apos;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Last_Name__c</fullName>
        <formula>if( NOT(ISBLANK( OptyName__c )), OptyName__r.Account.LastName , if(NOT(ISBLANK(LeadName__c)), LeadName__r.LastName,if(NOT(ISBLANK(AccountName__c)),AccountName__r.LastName, &apos;No Name&apos;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Preferred_Email__c</fullName>
        <label>Customer Preferred Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Disposition__c</fullName>
        <label>Disposition</label>
        <picklist>
            <picklistValues>
                <fullName>Missed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Answered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unreachable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unanswered</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LeadName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LeadName</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Communications</relationshipLabel>
        <relationshipName>Communications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <label>Customer Mobile Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>OptyName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>OptyName</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Communications</relationshipLabel>
        <relationshipName>Communications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <label>Project Name</label>
        <picklist>
            <picklistValues>
                <fullName>W54</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Atmosphere</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aquaria Grande</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>THE BKC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Recipient_Email__c</fullName>
        <label>Sales Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Sales_Manager_Email_1__c</fullName>
        <formula>OptyName__r.Sales_Manager_Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Manager Email 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Send_Site_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send_Site_Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting on someone else</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deferred</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TaskId__c</fullName>
        <externalId>true</externalId>
        <label>TaskId</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task_Type__c</fullName>
        <label>Task Type</label>
        <picklist>
            <picklistValues>
                <fullName>Follow-up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Site Visit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Repeat Enquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Send Brochure</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>sobjectName__c</fullName>
        <label>sobjectName</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <label>Communication</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Task_Type__c</columns>
        <columns>CallType__c</columns>
        <columns>Due_Date__c</columns>
        <columns>sobjectName__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Communication Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Communications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>